--- a/app/design/adminhtml/default/default/template/order/show/totals.phtml
+++ b/app/design/adminhtml/default/default/template/order/show/totals.phtml
@@ -1,7 +1,7 @@
 <?php $subTotal = $this->getOrder()->getSubTotal() ?>
 <?php $grandTotal = $this->getTotal() ?>
 <?php $shippingAmmount = $this->getShippingAmount() ?>
-<div class="box-right entry-edit">
+<div class="box-right entry-edit" style="padding-top: 20px;">
     <div class="entry-edit-head">
         <h4>Order Totals</h4>
     </div>
