--- a/app/design/adminhtml/default/default/template/order/quote/items/grid.phtml
+++ b/app/design/adminhtml/default/default/template/order/quote/items/grid.phtml
@@ -44,6 +44,8 @@
                     <th class="no-link"><?php echo $this->helper('order')->__('Product') ?></th>
                     <th class="no-link"><?php echo $this->helper('order')->__('Price') ?></th>
                     <th class="no-link"><?php echo $this->helper('order')->__('Qty') ?></th>
+                    <th class="no-link"><?php echo $this->helper('order')->__('Sub Total') ?></th>
+                    <th class="no-link"><?php echo $this->helper('order')->__('Total') ?></th>
 
                     <th class="no-link last"><?php echo $this->helper('order')->__('Action') ?></th>
                 </tr>
@@ -61,16 +63,20 @@
                 <td><?php echo $item->getSku() ?><br><?php echo $item->getName() ?></td>
                 <td> <?php echo $item->getPrice() ?></td>
                 <td><input type="number" min="1" name="product[<?php echo $item->getId() ?>][quantity]" value="<?php echo $item->getQuantity() ?>"></td>
+                <td> ₹<?php echo $item->getPrice() * $item->getQuantity() ?></td>
+                <td> ₹<?php echo $item->getPrice() * $item->getQuantity() ?></td>
                 <td><button name="delete[<?php echo $item->getId() ?>]" onclick="deleteItem()">Delete</button></td>
                 </tr>
             </tbody>
             <?php endforeach; ?>
             <?php endif; ?>
-            
             <tfoot>
                 <tr>
-                    <td class="a-left" colspan="4"><?php echo $this->helper('sales')->__('Total %d product(s)', count($_items)) ?>
-                    <button class="scalable update" style="float: right;" onclick="saveProduct()" type="button"><span>Update Quantity</span></button></td>
+                    <td class="a-left" colspan="2"><?php echo $this->helper('sales')->__('Total %d product(s)', count($_items)) ?></td>
+                    <td colspan="1" class="a-right">Subtotal:</td>
+                    <td class="price"><strong><span class="price">₹<?php echo $this->getQuote()->getSubTotal() ?></span></strong></td>
+                    <td class="price"><strong><span class="price">₹<?php echo $this->getQuote()->getSubTotal() ?></span></strong></td>
+                    <td><button class="scalable update" style="float: right;" onclick="saveProduct()" type="button"><span>Update Quantity</span></button></td>
                 </tr>
             </tfoot>
         </table>
